--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 
 .login_input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: white;
-  text-shadow: 1px 1px gray;
+  text-shadow: 1px 1px #2AC1C5;
 }
 .login_input:focus { outline: none; }
 .login_input:focus::-webkit-input-placeholder { opacity: 0; }
@@ -47,6 +47,10 @@ body {
 .icon {
   height: 25px;
   width: 25px;
+}
+
+.icon:hover {
+  cursor: pointer;
 }
 
 .react-google-oauth-button-iconWrapper {
